# language-quickstart

./: .gitignore  README.md
Java/mergesort/src/: MergeSort.java  MergeSortTest.java
c/: .gitignore
c++/: .gitignore
c++/dijkstra/: dijkstra.cpp  dijkstra.hpp  graph.hpp
c++/mergesort/: graph.py  makefile  mergesort.cpp  run.py
c++/mergesort-sequential/: mergesort.cpp
c/mergesort/: graph.py  makefile  mergesort.c  run.py
c/mergesort-sequential/: README.md  graph.py  makefile  mergesort.c  mergesort.cpp  run.py
go/mergesort/: README.md  mergesort.go
go/scraper/: README.md  go.mod  scraper.go
nim/mergesort/: README.md  mergesort.nim
rust/: .gitignore
rust/mergesort/: Cargo.toml
rust/mergesort/src/: main.rs
rust/scraper/: Cargo.toml
rust/scraper/src/: main.rs
