[package]
name = "language-quickstart_rust_scraper"
version = "0.1.0"
authors = ["Riley <rileyw13@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
regex = "1"
reqwest = { version = "0.10", features = ["json"] }
scraper = "^0.12"
tokio = { version = "0.2", features = ["full"] }
